[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tyler-fresh-pyproject"
version = "0.1.0"
description = "A very small Python project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
tyler-fresh = "tyler_fresh_pyproject:main"
